[package]
name = "rsfu"
description = "sfu buffer library."
version = "0.1.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/rsfu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["webrtc", "video", "sfu"]
edition = "2018"

[dependencies]
uuid = "1.2.1"
bytesio = "0.1.27"
byteorder = "1.4.2"
thiserror = "1.0.25"
anyhow = "1.0.41"
tokio = "1.12.0"
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
atomic = "0.5"
prometheus = "0.13.0"
regex = "1.5"
log = "0.4"
async-trait = "0.1.51"
toml = "0.5.8"
fns = "0.0.7"
failure = "0.1.1"

rtcp = "0.7.2"
rtp = "0.6.8"
sdp = "0.5.3"
turn = "0.6.1"
webrtc = "0.6.0"
webrtc-ice = "0.9.0"
interceptor = "0.8.2"
webrtc-util = "0.7.0"

# rtcp = { "path" = "/Users/zexu/github/webrtc/rtcp" }             
# rtp = { "path" = "/Users/zexu/github/webrtc/rtp" }                
# sdp = { "path" = "/Users/zexu/github/webrtc/sdp" }               
# turn = { "path" = "/Users/zexu/github/webrtc/turn" }             
# webrtc = { "path" = "/Users/zexu/github/webrtc/webrtc" }          
# webrtc-ice = { "path" = "/Users/zexu/github/webrtc/ice" }         
# interceptor = { "path" = "/Users/zexu/github/webrtc/interceptor" } 
# webrtc-util = { "path" = "/Users/zexu/github/webrtc/util" }
