[package]
name = "jrpc2-server"
description = "jrpc2-server"
version = "0.1.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/rsfu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2018"
[dependencies]
toml = "0.5.8"
serde_derive = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
anyhow = "^1.0"
log = "0.4.0"
env_logger = "0.9.0"
flexi_logger = "0.18"
chrono = "0.4"
failure = "0.1.1"
uuid = "1.2.1"
bytesio = "0.1.27"
byteorder = "1.4.2"
thiserror = "1.0.25"
async-trait = "0.1.51"
bytes = "1.1.0"

# webrtc = { "path" = "/Users/zexu/github/webrtc/webrtc" } 
# jrpc2 = { path = "../../jsonrpc2-rs/" }   
webrtc = "0.6.0"
jrpc2 = "0.2.4"

rsfu = { path = "../../rsfu/" }

[features]
default = ["std"]
std = ["serde"]

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]
